feat: update user id format
