# src/database/users/models.py
@@ -1,8 +1,8 @@
+from datetime import datetime, timezone, timedelta
 import json
-import uuid
 from dataclasses import dataclass
-import datetime as dt
 from typing import Optional
+import random
 
 from src.config import CONFIG
 
@@ -18,23 +18,23 @@ class User:
     last_name: str
     password_hash: str
     user_id: str = None  # user primary key, set during post init as unique id
-    sign_up_date: dt.datetime = dt.datetime.now(dt.UTC)
-    last_active_date: dt.datetime = dt.datetime.now(dt.UTC)
-    free_trial_end_date: dt.datetime = dt.datetime.now(dt.UTC) + dt.timedelta(
+    sign_up_date: datetime = datetime.now(timezone.utc)
+    last_active_date: datetime = datetime.now(timezone.utc)
+    free_trial_end_date: datetime = datetime.now(timezone.utc) + timedelta(
         days=CONFIG.newsletter.free_trial_length_days
     )
     verified: bool = False
     subscribed: bool = True
     profile_picture_s3_uri: Optional[str] = None
     profile_picture_url: Optional[str] = None
-    profile_picture_url_expiration: Optional[dt.datetime] = None
+    profile_picture_url_expiration: Optional[datetime] = None
     stripe_subscription_id: Optional[str] = None
     stripe_customer_id: Optional[str] = None
 
     def __post_init__(self) -> None:
         # if user_id is not set during instantiation, set it
         if self.user_id is None:
-            self.user_id = str(uuid.uuid4())
+            self.user_id = User.generate_user_id()
 
     def __eq__(self, other) -> bool:
         if isinstance(other, User):
@@ -77,6 +77,17 @@ class User:
             indent=4,
         )
 
+    def to_dict(self) -> dict:
+        return {
+            "user_id": self.user_id,
+            "email": self.email,
+            "first_name": self.first_name,
+            "last_name": self.last_name,
+            "sign_up_date": self.sign_up_date.isoformat(),
+            "last_active_date": self.last_active_date.isoformat(),
+            "verified": self.verified,
+        }
+
     def to_ddb_item(self) -> dict:
         # set default values for optional fields
         profile_picture_s3_uri = "N/A"
@@ -89,7 +100,7 @@ class User:
 
         profile_picture_url_expiration = "N/A"
         if self.profile_picture_url_expiration and isinstance(
-            self.profile_picture_url_expiration, dt.datetime
+            self.profile_picture_url_expiration, datetime
         ):
             profile_picture_url_expiration = (
                 self.profile_picture_url_expiration.isoformat()
@@ -125,3 +136,9 @@ class User:
             "stripe_subscription_id": {"S": stripe_subscription_id},
             "stripe_customer_id": {"S": stripe_customer_id},
         }
+
+    @staticmethod
+    def generate_user_id() -> str:
+        timestamp_part = str(int(datetime.now(timezone.utc).timestamp()))[-6:]
+        random_part = str(random.randint(1000, 9999))
+        return f"user-{timestamp_part}{random_part}"
